--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Med-Manager</string>
+    <string name="title_activity_medication">Medication Information</string>
+    <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="done">Done</string>
+    <string name="medication_name">Name of Medication</string>
+    <string name="medication_description">Description</string>
+    <string name="new_medication">Create New Medication</string>
+    <string name="frequency">Frequency</string>
+    <string name="frequency_type">Frequency Type</string>
+    <string name="preferred_time">Preferred Time</string>
+    <string name="choose_time">Choose Time…</string>
+    <string name="select_period">Select Period</string>
+    <string name="web_client_id">jncnsnsd</string>
+    <string name="sign_in_text">Please sign in to continue</string>
+
+    <string-array name="frequency_entries">
+
+    </string-array>
 </resources>
