--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Med-Manager</string>
     <string name="title_activity_medication">Medication Information</string>
-    <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="title_activity_user_profile">User Profile</string>
     <string name="action_settings">Settings</string>
     <string name="done">Done</string>
     <string name="medication_name">Name of Medication</string>
@@ -12,8 +12,12 @@
     <string name="preferred_time">Preferred Time</string>
     <string name="choose_time">Choose Time…</string>
     <string name="select_period">Select Period</string>
-    <string name="web_client_id">jncnsnsd</string>
+    <!--<string name="web_client_id">633481090758-n5qko56vi2po5fu3tbulraqd9b47j98q.apps.googleusercontent.com</string>-->
+    <string name="web_client_id">633481090758-ac75rmn05ct6b53uurnl5fmigpe57roe.apps.googleusercontent.com</string>
     <string name="sign_in_text">Please sign in to continue</string>
+    <string name="name">Name:</string>
+    <string name="age">Age</string>
+    <string name="user_image">User Image</string>
 
     <string-array name="frequency_entries">
 
