--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">Med-Manager</string>
     <string name="title_activity_medication">Medication Information</string>
     <string name="title_activity_user_profile">User Profile</string>
-    <string name="action_settings">Settings</string>
     <string name="done">Done</string>
     <string name="medication_name">Name of Medication</string>
     <string name="medication_description">Description</string>
@@ -12,20 +11,23 @@
     <string name="preferred_time">Preferred Time Per Day</string>
     <string name="choose_time">Choose Time…</string>
     <string name="select_period">Select Period</string>
-    <!--<string name="web_client_id">633481090758-n5qko56vi2po5fu3tbulraqd9b47j98q.apps.googleusercontent.com</string>-->
     <string name="web_client_id">633481090758-ac75rmn05ct6b53uurnl5fmigpe57roe.apps.googleusercontent.com</string>
-    <string name="sign_in_text">Please sign in to continue</string>
-    <string name="name">Name:</string>
+    <string name="name">Name</string>
     <string name="age">Age</string>
     <string name="user_image">User Image</string>
+    <string name="start_time">Start Time</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
     <string name="from">From:</string>
     <string name="to">To:</string>
     <string name="search_hint">Search Medications</string>
     <string name="no_medication_at_this_time">No Medication at this time</string>
     <string name="medication_name_input">Medication Name Input</string>
     <string name="medication_description_input">Medication Description Input</string>
+    <string name="text_details">Details</string>
+    <string name="ok">Okay</string>
+    <string name="icon_text">Medication Icon</string>
+    <string name="delete_icon">Delete Icon</string>
+    <string name="allergies">Allergies</string>
 
-    <string-array name="frequency_entries">
-
-    </string-array>
 </resources>
